[package]
name = "encoder"
version = "0.1.0"
edition = "2021"
authors = ["Jian Chen <admin@chensoft.com>"]
license = "MIT"
description = "A collection of crates for rapid encoding"
documentation = "https://docs.rs/encoder"
repository = "https://github.com/chensoft/encoder"
readme = "README.md"
exclude = ["lib/"]
keywords = ["encoder", "encode", "encoding"]

[workspace]
members = ["lib/*"]

[dependencies]
encoder-ryu = {path = "lib/encoder-ryu"}
encoder-itoa = {path = "lib/encoder-itoa"}