[package]
name = "encoder"
version = "0.2.0"
edition = "2021"
authors = ["Jian Chen <admin@chensoft.com>"]
license = "MIT"
description = "Blazing fast encoder written in Rust"
documentation = "https://docs.rs/encoder"
repository = "https://github.com/chensoft/encoder"
readme = "README.md"
keywords = ["encoder", "encode", "encoding", "number", "json"]

[dependencies]
simd-json = "=0.13.7"
encoder-ryu = {path = "lib/encoder-ryu", version = "=1.0.16"}